# xpdf-analysis

./: .gitignore  Makefile.am  TODO  configure.ac  test-builds  test-options
.github/workflows/: sonar.yml
.pc/: applied-patches
.pc/acute-accent-in-manpage.patch/doc/: xpdf.1
.pc/wrapper-options-manpage.patch/doc/: xpdf.1
doc/: xpdf.1  xpdfrc.5
goo/: gfile-xpdf.cc
